--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>2.3.2.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
